SET(mpx_api_SOURCES
  aque.cc
  base64.c
  md5.c
  random.cc
  gstpuid.cc
  libxml2-sax-base.cc
  xspf-libxml2-sax.cc
  lyrics.cc
  playlistparser-xspf.cc
  playlistparser-pls.cc
  xml.cc
  xpath.cc
)

# FIXME: Re-add CDIO

INCLUDE_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}
  ${PROJECT_SOURCE_DIR}/include	
  ${ALSA_INCLUDE_DIRS}
  ${Boost_INCLUDE_DIR}
  ${CAIROMM_INCLUDE_DIRS}
  ${CLUTTER_INCLUDE_DIRS}
  ${CDDA_INCLUDE_DIR}
# ${CDIO_INCLUDE_DIRS}
  ${DBUS_INCLUDE_DIRS}
  ${EXO_INCLUDE_DIRS}
  ${GDL_INCLUDE_DIRS}
  ${GIOMM_INCLUDE_DIRS}
  ${GLADEMM_INCLUDE_DIRS}
  ${GLIB_INCLUDE_DIRS}
  ${GLIBMM_INCLUDE_DIRS}
  ${GST_INCLUDE_DIRS}
  ${GTKGLEXT_INCLUDE_DIRS}
  ${GTKMM_INCLUDE_DIRS}
  ${HAL_INCLUDE_DIRS}
  ${NM_INCLUDE_DIRS}
  ${LIBOFA_INCLUDE_DIRS}
  ${PYGTK_INCLUDE_DIRS}
  ${PYTHON_INCLUDE_DIRS}
  ${RSVG_INCLUDE_DIRS}
  ${SEXYMM_INCLUDE_DIRS}
  ${SIGX_INCLUDE_DIRS}
  ${SOUP_INCLUDE_DIRS}
  ${SQLITE_INCLUDE_DIRS}
  ${STARTUP_NOTIFY_INCLUDE_DIRS}
  ${TAGLIB_INCLUDE_DIRS}
  ${X_INCLUDE_DIRS}
  ${XML_INCLUDE_DIRS}
  ${XPROTO_INCLUDE_DIRS}
)

ADD_LIBRARY(mpx-api SHARED ${mpx_api_SOURCES})

TARGET_LINK_LIBRARIES(mpx-api
  ${ALSA_LIBRARIES}
  ${Boost_REGEX_LIBRARY}
  ${Boost_FILESYSTEM_LIBRARY}
  ${Boost_IOSTREAMS_LIBRARY}
  ${Boost_PYTHON_LIBRARY}
  ${CAIROMM_LIBRARIES}
  ${CLUTTER_LIBRARIES}
# ${CDIO_LIBRARIES}
  ${CDPARANOIA_LIBRARIES}
  ${DBUS_LIBRARIES}
  ${EXO_LIBRARIES}
  ${GDL_LIBRARIES}
  ${GIOMM_LIBRARIES}
  ${GLADEMM_LIBRARIES}
  ${GLIBMM_LIBRARIES}
  ${GST_LIBRARIES}
  ${GTKGLEXT_LIBRARIES}
  ${GTKMM_LIBRARIES}
  ${HAL_LIBRARIES}
  ${NM_LIBRARIES}
  ${LIBOFA_LIBRARIES}
  ${PYGTK_LIBRARIES}
  ${PYTHON_LIBRARIES}
  ${RSVG_LIBRARIES}
  ${SEXYMM_LIBRARIES}
  ${SIGX_LIBRARIES}
  ${SM_LIBRARIES}
  ${SOUP_LIBRARIES}
  ${SQLITE_LIBRARIES}
  ${STARTUP_NOTIFY_LIBRARIES}
  ${TAGLIB_LIBRARIES}
  ${XML_LIBRARIES}
  ${XLIB_LIBRARIES}
  gstinterfaces-0.10
  gstvideo-0.10
  libmpx-parsers.so
)
