gladedir = $(pkgdatadir)/glade

glade_DATA = 							\
        cppmod-mmkeys.glade             \
        cppmod-prefs-audio.glade        \
                                        \
        equalizer.glade                 \
		pluginmanager.glade	            \
		preferences.glade				\
        timed-confirmation.glade
                                

EXTRA_DIST = $(glade_DATA)
