gladedir = $(pkgdatadir)/glade

glade_DATA = 							    \
        cppmod-mmkeys.glade                 \
        cppmod-prefs-audio.glade            \
        cppmod-prefs-audio-quality.glade    \
        cppmod-prefs-library.glade          \
        cppmod-prefs-coverart.glade         \
                                            \
        equalizer.glade                     \
		pluginmanager.glade	                \
		preferences.glade				    \
        timed-confirmation.glade
                                

EXTRA_DIST = $(glade_DATA)
