INSTALL(
  FILES disc-multiple.png
        disc.png
        emblem-compilation.png
        emblem-soundtrack.png
        jewelcase_bot.png
        jewelcase_top.png
        mainwindow-button-maximize.png
        mainwindow-button-minimize.png
        mainwindow-button-quit.png
        qual0.png
        qual1.png
        qual2.png
        qual3.png
        speaker_ghost.png
        speaker.png
        splash.png
        stars0.png
        stars1.png
        stars2.png
        stars3.png
        stars4.png
        stars5.png
        title-logo.png
        youki.png

  DESTINATION ${MPX_PKGDATADIR}/images
)
