images_DATA =						\
									\
		about.png					\
		artist.png					\
		disc.png					\
		splash.png					\
		throbber.gif				\
                                    \
        speaker.png                 \
        speaker_ghost.png           \
									\
		emblem-compilation.png		\
		emblem-soundtrack.png		\
									\
		icon-plugins-tab.png		\
		icon-now-playing-tab.png	\
                                    \
        jewelcase_bot.png           \
        jewelcase_top.png           \
                                    \
        title-logo.png              \
									\
		qual0.png					\
		qual1.png					\
		qual2.png					\
		qual3.png					\
									\
		stars0.png					\
		stars1.png					\
		stars2.png					\
		stars3.png					\
		stars4.png					\
		stars5.png					

imagesdir = $(pkgdatadir)/images
EXTRA_DIST = $(images_DATA)
