images_DATA =						\
        about.png                   \
        artist.png                  \
        blowup.png                  \
        disc-multiple.png           \
        disc.png                    \
        emblem-compilation.png      \
        emblem-soundtrack.png       \
        icon-now-playing-tab.png    \
        icon-plugins-tab.png        \
        jewelcase_bot.png           \
        jewelcase_top.png           \
        off.png                     \
        qual0.png                   \
        qual1.png                   \
        qual2.png                   \
        qual3.png                   \
        speaker_ghost.png           \
        speaker._ghostpng.png       \
        speaker.png                 \
        splash.png                  \
        stars0.png                  \
        stars1.png                  \
        stars2.png                  \
        stars3.png                  \
        stars4.png                  \
        stars5.png                  \
        title-logo.png              \
        youki.png                   
									
imagesdir = $(pkgdatadir)/images
EXTRA_DIST = $(images_DATA)

