# FIXME: Centralise this
SET_PROPERTY(DIRECTORY PROPERTY COMPILE_DEFINITIONS HAVE_CONFIG_H)

SET(LIBHALCC_SOVERSION 3.0.0)
SET(LIBHALCC_VERSION 1.0)

SET(LIBHALCC_SOURCES
  context.cc
  device.cc
  drive.cc
  volume.cc
  util.cc
)

SET(LIBHALCC_COMMON_HEADERS
  context.hh
  device.hh
  exception.hh
  refptr.hh
  types.hh
  storage.hh
  drive.hh
  volume.hh
  hcc-macros.hh
  util.hh
  hal++.hh
)

INCLUDE_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}
  ${SIGC_INCLUDE_DIRS}
  ${DBUS_INCLUDE_DIRS}
  ${HAL_INCLUDE_DIRS}
  ${GLIB_INCLUDE_DIRS}
)

SET_SOURCE_FILES_PROPERTIES(${LIBHALCC_SOURCES}
  PROPERTIES
  COMPILE_FLAGS "${SIGC_OTHER_CFLAGS} ${DBUS_OTHER_CFLAGS} ${HAL_OTHER_CFLAGS} ${HAL_OTHER_CFLAGS}"
)

IF(HAVE_BMP)
  ADD_LIBRARY(halcc STATIC ${LIBHALCC_SOURCES})
  SET_TARGET_PROPERTIES(halcc PROPERTIES VERSION ${LIBHALCC_VERSION} SOVERSION ${LIBHALCC_SOVERSION})

ELSE(HAVE_BMP)
  ADD_LIBRARY(halcc SHARED ${LIBHALCC_SOURCES})
  SET_TARGET_PROPERTIES(halcc PROPERTIES VERSION ${LIBHALCC_VERSION} SOVERSION ${LIBHALCC_SOVERSION})

  INSTALL(
    FILES ${LIBHALCC_COMMON_HEADERS}
    DESTINATION include/hal++-1.0/hal++
  )

  INSTALL(
    TARGETS halcc
    LIBRARY DESTINATION lib #${CMAKE_INSTALL_LIBDIR}
    ARCHIVE DESTINATION lib #${CMAKE_INSTALL_LIBDIR}
  )
ENDIF(HAVE_BMP)

TARGET_LINK_LIBRARIES(halcc ${SIGC_LIBRARIES} ${DBUS_LIBRARIES} ${HAL_LIBRARIES} ${GLIB_LIBRARIES})
